cuepls: initial version of "vendor" script
Our approach for creating an initial version of cuepls (named after
gopls) is to start with the gopls implementation, then cut it down,
refactor rename.

This approach (that found in this stack of changes) is the third such
iteration.

The first also started with a working gopls server, but cut
it down and refactored things in a more drastic way. This ultimately
caused us to get bogged down in too much aggressive refactoring early
on.

The second attempt started from a blank page, with "as-required" copying
and adapting of existing gopls code to build out a new LSP server bit by
bit. This meant the "time to a working server" was significantly longer.

This approach again starts with a verbatim copy of gopls but using
"vendored" code from golang.org/x/...

This CL prepares for that "vendor" to define a script that will help
with the vendoring.

This script will be used to vendor parts of golang.org/x/..., after
which we will cut things down by hand.

This is a very basic hard-coded script for now. It might be that we
only use it once. The goal for now is not reuse, just getting the job
done.

It's also unclear whether we will ever re-run the script. Again, the
focus is on the initial import, not later reuse.

Also make a change to exlude the soon-to-be-vendored
cuelang.org/go/internal/golangorgx/tools/testenv package from go vet
checks. We make that change in this preparatory CL so that the CL where
we run the "vendor" script is as mechanical as possible.

DO NOT REVIEW

For #142

Signed-off-by: Paul Jolly <paul@myitcv.io>
Change-Id: Ibdd55f25a66772e06fcab65a8678950e40d81857

--- a/.github/workflows/trybot.yml
+++ b/.github/workflows/trybot.yml
@@ -194,7 +194,7 @@ jobs:
           for module in . internal/e2e; do
           	(
           		cd $module
-          		go vet ./...
+          		go vet $(go list ./... | grep -v cuelang.org/go/internal/golangorgx/tools/testenv)
           		go mod tidy
           	)
           done
