--- a/.github/workflows/trybot.yml
+++ b/.github/workflows/trybot.yml
@@ -185,6 +185,7 @@ jobs:
         name: End-to-end test
         env:
           GITHUB_TOKEN: ${{ secrets.E2E_GITHUB_TOKEN }}
+          CUE_LOGINS: ${{ secrets.E2E_CUE_LOGINS }}
         run: |-
           cd internal/e2e
           go test
