internal/ci: run the end-to-end tests with -race
This would have meant catching data races like the one fixed by
https://cuelang.org/cl/1176581 much sooner,
since -race makes it far more likely to spot them.

Signed-off-by: Daniel Martí <mvdan@mvdan.cc>
Change-Id: Ie4b6f4111a3b47a0a0304cc56adab25eefd88f40

--- a/.github/workflows/trybot.yml
+++ b/.github/workflows/trybot.yml
@@ -188,7 +188,7 @@ jobs:
           CUE_LOGINS: ${{ secrets.E2E_CUE_LOGINS }}
         run: |-
           cd internal/e2e
-          go test
+          go test -race
       - if: (matrix.go-version == '1.22.x' && matrix.runner == 'ubuntu-22.04')
         name: Check
         run: |-
